# Master_Thesis

./: .gitmodules  README.md
cpp_capra_nodes/: CMakeLists.txt  package.xml
cpp_capra_nodes/src/: capra_nodes.cpp
cpp_gps_pub/: CMakeLists.txt  package.xml
cpp_gps_pub/src/: gps_pub.cpp
cpp_main/: CMakeLists.txt  Notes.txt  package.xml
cpp_main/include/: functions.h  utils.h
cpp_main/src/: functions.cpp  project.cpp  utils.cpp
py_odo/: package.xml  setup.cfg  setup.py
py_odo/py_odo/: odo.py
